# rust-web-benchmarks

bench-bot/src/: main.rs
benchmark/hello-world/actix-web/: Cargo.toml
benchmark/hello-world/actix-web/src/: main.rs
benchmark/hello-world/axum/: Cargo.toml
benchmark/hello-world/axum/src/: main.rs
benchmark/hello-world/go_fasthttp/: Cargo.toml  go.mod  main.go
benchmark/hello-world/go_nethttp/: Cargo.toml  go.mod  main.go
benchmark/hello-world/hyper/: Cargo.toml
benchmark/hello-world/hyper/src/: main.rs
