[package]
name = "hello-world-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["tokio"] } # Enable the tokio feature
http-body-util = { version = "0.1.2" }
tokio = { version = "1", features = ["full"] }
bytes = "1.7.2"
